// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changing PK column type [postgres] (GH 1480) change PK type from json to serial: 0. create schema with text PK 1`] = `
"create table \\"user\\" (\\"id\\" text not null);
alter table \\"user\\" add constraint \\"user_pkey\\" primary key (\\"id\\");

"
`;

exports[`changing PK column type [postgres] (GH 1480) change PK type from json to serial: 1. change PK type from text to int 1`] = `
"alter table \\"user\\" drop constraint if exists \\"user_id_check\\";
alter table \\"user\\" alter column \\"id\\" type int using (\\"id\\"::int);

"
`;

exports[`changing PK column type [postgres] (GH 1480) change PK type from json to serial: 2. add new PK (make it composite PK) 1`] = `
"alter table \\"user\\" add column \\"id2\\" int not null;
alter table \\"user\\" drop constraint \\"user_pkey\\";
alter table \\"user\\" add constraint \\"user_pkey\\" primary key (\\"id\\", \\"id2\\");

"
`;

exports[`changing PK column type [postgres] (GH 1480) change PK type from json to serial: 3. remove old PK (make it single PK again) 1`] = `
"alter table \\"user\\" drop constraint \\"user_pkey\\";
alter table \\"user\\" drop column \\"id2\\";
alter table \\"user\\" add constraint \\"user_pkey\\" primary key (\\"id\\");

"
`;

exports[`changing PK column type [postgres] (GH 1480) change PK type from json to serial: 4. change PK type from int to serial 1`] = `
"alter table \\"user\\" drop constraint if exists \\"user_id_check\\";
alter table \\"user\\" alter column \\"id\\" type int using (\\"id\\"::int);
create sequence if not exists \\"user_id_seq\\";
select setval('user_id_seq', (select max(\\"id\\") from \\"user\\"));
alter table \\"user\\" alter column \\"id\\" set default nextval('user_id_seq');

"
`;

exports[`changing PK column type [postgres] (GH 1480) change PK type from json to serial: 5. change PK type from serial to text 1`] = `
"alter table \\"user\\" drop constraint if exists \\"user_id_check\\";
alter table \\"user\\" alter column \\"id\\" type text using (\\"id\\"::text);
alter table \\"user\\" alter column \\"id\\" drop default;

"
`;
